# mini-ray

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  diagnose_objectstore2.py  requirements.txt  setup.py  test_phase1.py
cpp/: CMakeLists.txt  OBJECT_STORE_ANALYSIS.md  OBJECT_STORE_OPTIMIZATION.md
cpp/include/miniray/common/: buffer.h  id.h  memory.h  object_ref.h  task.h
cpp/include/miniray/core_worker/: core_worker.h
cpp/include/miniray/object_store/: object_store.h
cpp/include/miniray/raylet/: scheduler.h
cpp/include/miniray/shared/: shared_memory.h  shared_object_store.h  shared_scheduler.h
cpp/src/: python_bindings.cpp
cpp/src/common/: memory.cpp
cpp/src/core_worker/: core_worker.cpp
cpp/src/object_store/: object_store.cpp
cpp/src/raylet/: scheduler.cpp
doc/: CMAKE_GUIDE.md  DASHBOARD_REFACTOR.md  DESIGN.md  PHASE1_SUMMARY.md  PHASE2_GUIDE.md  PHASE3_DESIGN.md  PROJECT_STRUCTURE.md  SHARED_MEMORY_GUIDE.md  SHARED_MEMORY_USAGE.md
examples/: 01_object_store.py  01_phase1_object_store.py  02_scheduler.py  03_simple_task.py  04_ml_training_with_dashboard.py  05_hyperparameter_tuning.py  README.md  __init__.py  demo_actor.py  demo_dashboard_decorator.py  parameter_server_demo.py
ml/: 01_training_inference.py  README.md  __init__.py  distributed_gan.py  gan_cifar10.py  generate.py  requirements.txt  train.py
ml/gan/: __init__.py  distributed_trainer.py  generate.py  models.py  train.py
ml/utils/: __init__.py  data_utils.py
python/miniray/: __init__.py  actor.py  api.py  core.py  events.py  scheduler.py  worker.py
python/miniray/dashboard/: FRONTEND_README.md  (+7 more)
tests/: README.md  __init__.py  conftest.py  demo_phase1.py  demo_phase2.py  demo_shared_memory.py  test_actor.py  test_api.py  test_bindings.py  test_cpp_core.py  test_dashboard.py  test_events.py  test_gan_distributed.py  test_gan_models.py  test_gan_workflow.py  test_integration.py  test_object_store.py  test_ps.py  test_scheduler.py  test_train.py  test_tune.py
(+21 files in other folders)
